# inc

./: .gitignore  CMakeLists.txt  InC  InC-environment.rb  LICENSE  Makefile  README.md  checklist  checklist~  circle.yml  init audio.txt
InC-master/: Makefile  README.md
InC-master/include/: background.h  caio.h  enemy.h  frontend.h  game.h  hp.h  hud.h  inputhandler.h  inventory.h  platform.h  resource.h  sebastiao.h  secondlayer.h  systemlogger.h
InC-master/src/: background.cpp  caio.cpp  (+7 more)
debian/: changelog  control  files  rules
include/: Find Results  aim.h  alteredpotion.h  antiboss.h  antitudo.h  audiohandler.h  background.h  battery.h  behavior.h  behaviour.h  caio.h  camera.h  civil.h  collision.h  configuration.h  configurationmenu.h  controls.h  cup.h  curupira.h  dialogue.h  enemy.h  entity.h  fontconfiguration.h  freeboi.h  frontend.h  game.h  gamemenu.h  gameover.h  gigante.h  hp.h  hud.h  imageeffect.h  imageload.h  imagesprite.h  inclogo.h  input.h  inputhandler.h  inventory.h  item.h  level.h  (+24 more)
src/: aim.cpp  alteredpotion.cpp  antitboss.cpp  antitudo.cpp  audiohandler.cpp  background.cpp  battery.cpp  behavior.cpp  behaviour.cpp  caio.cpp  camera.cpp  civil.cpp  collision.cpp  configuration.cpp  configurationmenu.cpp  controls.cpp  cup.cpp  curupira.cpp  dialogue.cpp  enemy.cpp  entity.cpp  fontconfiguration.cpp  freeboi.cpp  frontend.cpp  game.cpp  gamemenu.cpp  gameover.cpp  gigante.cpp  hp.cpp  hud.cpp  imageeffect.cpp  imageload.cpp  imagesprite.cpp  inclogo.cpp  input.cpp  inventory.cpp  item.cpp  levelfive.cpp  levelfour.cpp  levelone.cpp  (+22 more)
(+4 files in other folders)
