cmake_minimum_required(VERSION 2.8)
project(InC CXX)

set(CPPFLAGS "-O2 -g -W -Wall -pedantic -ansi -Wno-long-long -Wextra -Wshadow")
add_definitions(-std=c++11)
set( ROOT "${CMAKE_CURRENT_SOURCE_DIR}" )
set( SRC_DIR "${ROOT}/src")
set( LIB_DIR "${ROOT}/include")

file( GLOB LIBS ${LIB_DIR}/)
file( GLOB LIBS ${LIBS_DIR}/*.h)
include_directories(${LIBS_DIR})
set(CMAKE_CXX_FLAGS ${CPPFLAGS} ${LDFLAGS})
file( GLOB SRCS ${SRC_DIR}/*.cpp)

add_executable(InC ${LIBS_DIR} ${SRCS})

INCLUDE(FindPkgConfig)

PKG_SEARCH_MODULE(SDL2 REQUIRED sdl2)
PKG_SEARCH_MODULE(SDL2_IMAGE REQUIRED SDL2_image)
PKG_SEARCH_MODULE(SDL2_TTF REQUIRED SDL2_ttf)
PKG_SEARCH_MODULE(SDL2_MIXER REQUIRED SDL2_mixer)

INCLUDE_DIRECTORIES(${SDL2_INCLUDE_DIRS} ${SDL2_IMAGE_INCLUDE_DIRS} ${SDL2_TTF_INCLUDE_DIRS} ${SDL2_MIXER_INCLUDE_DIRS})
TARGET_LINK_LIBRARIES(InC ${SDL2_LIBRARIES}  ${SDL2_IMAGE_LIBRARIES} ${SDL2_TTF_LIBRARIES} ${SDL2_MIXER_LIBRARIES})
